--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.74.0",
+    "react-native-checkbox": "^2.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.1.3"
   },
